[tool.poetry]
name = "pysimda"
version = "0.1.0"
description = "Python-based discrete-event simulation software"
authors = ["Connor Rubin <csrubin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
simpy = "4.0.1"
lea = "3.4.4"
plotly = "^5.13.0"
pandas = "^2.0.3"
watchdog = "^3.0.0"
loguru = "^0.7.0"
pymoo = "^0.6.0"
polars = "^0.18.6"
toml = "^0.10.2"
nicegui = "^1.2.24"
pywebview = "^4.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
mypy = "^1.0.1"
pre-commit = "^3.5.0"
ruff = "^0.1.5"
netifaces = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 145

[tool.ruff.lint]
ignore = ["F841", "E722"]
select = [
    # isort
    "I001"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length  = 80

[tool.mypy]
ignore_missing_imports = true